# hansard

./: .gitignore  .replit  all_votes_one_member.py  app.py  dsl.py  dsl_supporter.py  find_divisions.py  heckle_patterns.py  ingest_all.py  ingest_divisions_and_contributions.py  ingest_member_data.py  ingest_oral_questions.py  ingest_written_questions_and_statements.py  pyproject.toml  utils.py
frontend/src/: App.js  DSLBuilder.js  DSLBuilder.jsx  DSLBuilder.module.css  PreviewFrames.js  StepCard.jsx
frontend/src/components/: ColumnsPreview.jsx  ColumnsPreview.module.css  DivisionBox.jsx  Dropdown.jsx  Dropdown.module.css  Modal.jsx  WeightEditModal.jsx  WindowedColumnsPreview.jsx
frontend/src/editors/: AggregateEditor.jsx  BaseEditor.jsx  ContributionsList.jsx  ContributionsList.module.css  DSLBuilder.jsx  DSLExpressionBuilder.jsx  DSLExpressionBuilder.module.css  DivisionCard.jsx  DivisionCard.module.css  DivisionDSLBuilder.jsx  DivisionDSLBuilder.module.css  DivisionVotesEditor.jsx  DivisionsResults.jsx  DivisionsResults.module.css  FilterEditor.jsx  JoinEditor.jsx  SourceEditor.jsx  SourceEditor.module.css  index.js
frontend/src/editors/MutateEditor/: Expr.jsx  ExpressionBuilder.jsx  Modal.jsx  MutateEditor.jsx
frontend/src/editors/common/: ColumnPreviewComponent.jsx  EditorHooks.js  EditorStyles.js
frontend/src/hooks/: useSchemaCache.js
frontend/src/utils/: DeriveSchema.js  ExpressionUtils.js  GenerateId.js  OpCatalog.js
