[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "requests>=2.32.4",
    "scipy>=1.14.0,<1.16.0",
    "slugify>=0.0.1",
    "statsmodels>=0.14.0,<0.15.0",
]
